--- a/ClientApp/src/App.css
+++ b/ClientApp/src/App.css
@@ -7,3 +7,13 @@
 .App-link {
   color: #61dafb;
 }
+
+.chat-container {
+  display: flex;
+  min-height: 100vh;
+  padding-top: 55px;
+  padding-bottom: 55px;
+  flex-direction: column-reverse;
+  margin-left: auto;
+  margin-right: auto;
+}
